--- a/app/src/main/res/layout/fragment_dash_board.xml
+++ b/app/src/main/res/layout/fragment_dash_board.xml
@@ -101,9 +101,9 @@
     <Spinner
         android:id="@+id/spinnerSort"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:layout_gravity="end"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="74dp"
         android:entries="@array/sort_options"
         android:prompt="@string/sort_prompt" />
 
@@ -112,7 +112,7 @@
         android:id="@+id/dashboardRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="100dp"
         tools:listitem="@layout/list_item_dashboard">
 
     </androidx.recyclerview.widget.RecyclerView>
