--- a/app/src/main/res/layout/activity_budget.xml
+++ b/app/src/main/res/layout/activity_budget.xml
@@ -100,7 +100,7 @@
                 android:layout_marginTop="16dp"
                 android:ems="10"
                 android:hint="Amount"
-                android:inputType="text"
+                android:inputType="number"
                 android:textColor="#000000"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.075"
